# beetman

./: .gitignore  Dockerfile  create_user.py  package-lock.json  pyproject.toml  wsgi.py
src/api/: application.py  beetman.py  config.json.example  main.py  routes.py  wsgi.py
src/api/_bcrypt/: __init__.py  _bcrypt.py
src/api/_beets/: __init__.py  lib_wrapper.py
src/api/_jwt/: __init__.py  _jwt.py  cookie_jwt_manager.py
src/api/model/: __init__.py  config.py  lib_wrapper.py  model.py
src/api/routes/: api_routes.py  auth_routes.py  frontend_routes.py
src/client/: package-lock.json  package.json  webpack.config.js
src/client/src/: api.ts  config.ts  index.tsx  types.tsx
src/client/src/components/: AlbumComponent.tsx  Search.tsx  SearchBar.tsx  SearchResults.tsx  TrackComponent.tsx
src/client/src/contexts/: authContext.tsx
src/client/src/pages/: AlbumPage.tsx  LoginPage.tsx  Search.tsx  TrackPage.tsx
