[project]
name = "beetman"
dynamic = ["version"]
description = 'GUI Manager used to control a remote beet instance'
readme = "README.md"
requires-python = ">=3.8"
keywords = []
authors = [
  { name = "Griff", email = "rickleg.93@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "beets==2.0.0",
    "flask==3.1.0",
    "pydantic==2.9.2",
    "sqlalchemy==2.0.36",
    "Flask-JWT-Extended==4.7.1",
    "Flask-Bcrypt==1.0.1",
    "Flask-SQLAlchemy==3.1.1",
]

[project.scripts]
beetman="api:main.main"

[project.urls]
Documentation = "https://github.com/griffin-rickle/beetman"
Issues = "https://github.com/griffin-rickle/beetman/issues"
Source = "https://github.com/griffin-rickle/beetman"

[project.optional-dependencies]
dev = [
    "debugpy",
    "pynvim",
    "neovim",
    "pylsp-mypy",
    "python-lsp-isort",
    "python-lsp-black"
]

[tool.black]
line.length = 120

[tool.mypy]
disable_error_code = [
    'import-untyped'
]

[tool.pylint]
disable = [
    'missing-module-docstring',
    'missing-function-docstring',
    'missing-class-docstring'
]
